--- a/src/routes/Movie/Item.module.scss
+++ b/src/routes/Movie/Item.module.scss
@@ -1,28 +1,52 @@
 @use '/src/styles/constants/colors';
 
-.movieCard {
-  display: flex;
-  padding: 8px;
-  margin-top: 12px;
-  border: 1px solid white;
-  border-radius: 12px;
+.itemContainer {
+  position: relative;
 
-  img {
-    flex: 1;
-    width: 85px;
-    height: 120px;
+  .movieCard {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    margin-top: 12px;
+    border: 1px solid white;
     border-radius: 12px;
+
+    img {
+      flex: 2;
+      width: 100px;
+      height: 100%;
+      border-radius: 12px;
+    }
+
+    .movieDesc {
+      display: flex;
+      flex: 3;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      height: 235px;
+      // overflow: hidden;
+
+      h3 {
+        font-size: 24px;
+        color: colors.$WHITE;
+      }
+
+      p {
+        font-size: 20px;
+      }
+    }
   }
 
-  .movieDesc {
-    display: flex;
-    flex: 3;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-    h3 {
-      color: colors.$WHITE;
-    }
+  .checkIcon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: 24px;
+    margin-top: 5px;
+    color: colors.$WHITE;
   }
 }
