--- a/src/routes/Movie/Favorites/Favorites.module.scss
+++ b/src/routes/Movie/Favorites/Favorites.module.scss
@@ -4,9 +4,13 @@
   display: flex;
   flex-direction: column;
   width: 420px;
-  height: 540px;
+  height: 600px;
   background: #2d2f3c;
   border-radius: 24px;
+
+  header {
+    height: 88px;
+  }
 
   h1 {
     padding: 12px;
