--- a/src/routes/Movie/Favorites/Favorites.module.scss
+++ b/src/routes/Movie/Favorites/Favorites.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: 420px;
   height: 600px;
-  background: #2d2f3c;
+  background: #161621;
   border-radius: 24px;
 
   header {
