--- a/src/routes/Movie/Movie.module.scss
+++ b/src/routes/Movie/Movie.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 420px;
-  background: #2d2f3c;
+  background: #161621;
   border-radius: 24px;
 
   h1 {
