--- a/src/routes/Movie/item.module.scss
+++ b/src/routes/Movie/item.module.scss
@@ -10,13 +10,14 @@
     height: 100%;
     padding: 8px;
     margin-top: 12px;
-    border: 1px solid white;
+    border: 1px solid colors.$WHITE;
     border-radius: 12px;
 
     img {
       flex: 2;
       width: 100px;
       height: 100%;
+      color: colors.$WHITE;
       border-radius: 12px;
     }
 
